don't reexport GHC.Event on ghcjs

--- a/base-noprelude.cabal
+++ b/base-noprelude.cabal
@@ -257,6 +257,6 @@ library
           , GHC.IO.Encoding.CodePage.Table
           , GHC.Conc.Windows
           , GHC.Windows
-    else
+    elif !impl(ghcjs)
         reexported-modules:
           , GHC.Event
